--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
   <div style="text-align: center;">
     <img src="https://img-zuhalmuzik.mncdn.com/assets/images/zuhal_logo.png" alt="Zuhal Müzik Logo" width="200">
-    <p>🎁 Türk Zuhal Müzik Hediye Kartı! 🎸</p>
+    <p>🎁 Zuhal Müzik Hediye Kartı! 🎸</p>
     <p>Ozan K. tarafından size ücretsiz bir Fender gitar hediye ediliyor!</p>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="claim-button">Hediyeni Şimdi Al!</a>
     <a href="https://www.zuhalmuzik.com/" target="_blank" class="return-button">Ana Ekrana Dön</a>
