--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <img src="https://img-zuhalmuzik.mncdn.com/assets/images/zuhal_logo.png" alt="Zuhal Müzik Logo" width="200">
     <p>🎁 Zuhal Müzik Hediye Kartı! 🎸</p>
     <p>Ozan K. tarafından size ücretsiz bir Fender gitar hediye ediliyor!</p>
+    <p> Ozan K. den sana bir mesaj:İyi ki doğdun Meto!Umarım beğenirsin, Zuhal'in hediye kartları varmış, ondan sana benden hediye!</p>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="claim-button">Hediyeni Şimdi Al!</a>
     <a href="https://www.zuhalmuzik.com/" target="_blank" class="return-button">Ana Ekrana Dön</a>
   </div>
